Cambios y mejoras en la UI